# patzer-gambit

./: .gitignore  README.md
engine/: Cargo.toml  asm_sym.txt  make_move.asm  o2.c.txt  output.c.txt  output.c2.txt  output.txt  output2.c2.txt  output2.txt
engine/src/: boards.rs  controller.rs  engine.rs  evaluation.rs  fen.rs  incremental.rs  lookups.rs  magics.rs  main.rs  masks.rs  movegen.rs  moves.rs  movescoring.rs  mv.rs  perft.rs  pieces.rs  player.rs  position.rs  scoring.rs  searcher.rs  searchinfo.rs  settings.rs  square.rs  time.rs  transposition.rs  uci.rs  zobrist.rs
engine/src/constants/: masks.rs  mod.rs  search.rs
engine/src/evaluation/: material.rs  mod.rs  moves.rs  piece.rs  position.rs  pqst_tapered.rs  psqt_tapered.rs
engine/src/fen/: mod.rs  parse.rs  stringify.rs
engine/src/moves/: data.rs  mod.rs  move_data.rs  move_item.rs  perft.rs  scoring.rs
engine/src/moves/attacked/: in_check.rs  mod.rs  smallest_attacker_see.rs  square_attacked.rs
engine/src/moves/generator/: mod.rs  movegen.rs
engine/src/moves/precalculate/: bishop.rs  cache.rs  king.rs  knight.rs  magic_bitboards.rs  mod.rs  pawn.rs  rook.rs
engine/src/search/: cache.rs  history.rs  killer.rs  minmax.rs  mod.rs  negamax.rs  quiescence.rs  searchinfo.rs  think.rs  transposition.rs  zobrist.rs
engine/src/state/: bitboards.rs  boards.rs  fen.rs  game.rs  mod.rs  movelist.rs  moves.rs  pieces.rs  player.rs  square.rs
engine/src/tests/: incremental.rs  mate4s.rs  mate_in_4s.rs  mod.rs  perft.rs
engine/src/utils/: in_check.rs  mod.rs  square_attacked.rs
(+32 files in other folders)
