[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[profile.test]
opt-level = 1

[profile.release]
# debug = true
debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "2.7.3"
regex = "1.10.3"
xorshift = "0.1.3"
