[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[profile.test]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
debug = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.3"
xorshift = "0.1.3"
